# ontra

./: .gitignore  .python-version  Containerfile  Makefile  README.md  app.py  delete-images.sh  entry.sh  main.tf  outputs.tf  providers.tf  pyproject.toml  variables.tf
.github/workflows/: ci.yml  docker.yml
ontra/: server.py
tests/: test_server.py
