[tool.poetry]
name = "ontra"
version = "0.1.0"
description = "demo project"
authors = ["Joshua Jesse Coronado <joshua@coronado.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
mypy = "^1.5.1"
black = "^23.9.1"
prospector = "^1.10.2"
bandit = "^1.7.5"
vulture = "^2.9.1"
fastapi = {extras = ["testclient"], version = "^0.103.2"}
httpx = "^0.25.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
